# LibraAlchemy

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
assets/: output.html
assets/templates/: album.hbs  author.hbs  book.hbs  main.hbs  series.hbs  style.hbs
src/: builder.rs  functions.rs  hbs.rs  library.rs  main.rs  scanner.rs  structs.rs  templates.rs
src/routes/: authors.rs  books.rs  mod.rs  public.rs  series.rs
src/templates/: mod.rs  raw.rs
templates/: first.html.hbs  index.html.hbs  static.html.hbs  style.html.hbs
templates/books/: book.html.hbs
templates/components/: books_grid.html.hbs  footer.html.hbs  navbar.html.hbs  page.html.hbs  series_grid.html.hbs
templates/gallery/: author.html.hbs  book.html.hbs  index.html.hbs
templates/hbs/: index.html.hbs
templates/pages/: error.html.hbs  home.html.hbs
templates/pages/authors/: author.html.hbs  list.html.hbs  page.html.hbs
templates/pages/books/: details.html.hbs  list.html.hbs  page.html.hbs
templates/pages/series/: list.html.hbs  page.html.hbs
