[package]
name = "LibraAlchemy"
version = "0.3.0"
author = "Azalurg"
description = "Craft your private audio library with open-source magic. Curate, personalize, and transmute your collection offline, powered by alchemy."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.7"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
walkdir = "2.3.3"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[features]
external-templates = []