[package]
name = "LibraAlchemy"
version = "1.1.0"
author = "Azalurg"
description = "Craft your private audio library with open-source magic. Curate, personalize, and transmute your collection offline, powered by alchemy."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.4.10", features = ["derive"] }
rand = "0.8.5"
regex = "1.10.2"
rocket = "=0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"]}
rust-embed = "8.1.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tempfile = "3.8.1"
walkdir = "2.3.3"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[features]
external-templates = []
